--- a/cadastro.HTML
+++ b/cadastro.HTML
@@ -8,6 +8,7 @@
     <title>Login - AcquaTec</title>
     <link rel="stylesheet" href="./style.CSS">
     <link rel="stylesheet" href="./formulario.estilo.css">
+    <link rel="stylesheet" href="./cadastro.estilo.css">
 
 </head>
 
@@ -19,24 +20,30 @@
                 <li><a href="./home.HTML">Home</a></li>
                 <li>Simulador</li>
                 <li>|</li>
-                <li id="home"><a href="./login.HTML">Login</a></li>
-                <li><a href="./cadastro.HTML">Cadastro</a></li>
+                <li><a href="./login.HTML">Login</a></li>
+                <li id="home"><a href="./cadastro.HTML">Cadastro</a></li>
             </ul>
         </div>
     </div>
     
     <div class = "banner">
         <div class = "container">
-            <div class="caixa_formulario">
+            <div class="caixa_cadastro">
                 <h1>Olá de volta!</h1>
-                <div class="formulario">
+                <div class="cadastro">
+                    <span>Nome</span>
+                    <input type="text"  id="nome_input" placeholder="Seu Nome">
+
                     <span>E-mail:</span>
-                    <input type="email" id="email_input" placeholder="Seu E-mail">
+                    <input type="email" id="email_input" placeholder="seuemail@.com">
 
                     <span>Senha:</span>
                     <input type="password" id="senha_input" placeholder="********">
 
-                    <button>Entrar</button>
+                    <span class="tamsenha" >Confirmação de Senha:</span>
+                    <input type="password" id="senha_input" placeholder="********">
+
+                    <button>Cadastre</button>
                 </div>
             </div>
         </div>
