--- a/home.HTML
+++ b/home.HTML
@@ -20,7 +20,7 @@
                     <li>Simulador</li>
                     <li>|</li>
                     <li><a href="./login.HTML">Login</a></li>
-                    <li>Cadastro</li>
+                    <li><a href="./cadastro.HTML">Cadastro</a></li>
                 </ul>
             </div>
         </div>
